# is-odd-mcp

./: README.md  main.py  pyproject.toml  server.py
.github/workflows/: test.yml
tests/: test_is_odd.py
